<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/giraf_background"
    tools:context="dk.aau.cs.giraf.sequence.DeleteSequencesActivity"
    tools:ignore="OverDraw"
    android:id="@+id/copying_sequences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/headline_copy"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_copy_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="60sp"
            android:textStyle="bold"
            android:text="@string/copy_sequences"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lists_copy"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal">

        <dk.aau.cs.giraf.gui.GGridView
            android:id="@+id/existing_sequences"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:numColumns="3"
            android:listSelector="#00000000"
            android:fadeScrollbars="false">
        </dk.aau.cs.giraf.gui.GGridView>

        <ImageView
            android:contentDescription="@string/copy_sequences_window_arrow"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/gdialogcolorselect_arrow_right"
            android:layout_gravity="center_vertical"
            />

        <dk.aau.cs.giraf.gui.GGridView
            android:id="@+id/empty_sequences"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:numColumns="3"
            android:listSelector="#00000000"
            android:fadeScrollbars="false">
        </dk.aau.cs.giraf.gui.GGridView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons_copy"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/white_thingy_two"
            android:contentDescription="@string/empty_space"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/popup_copy_accept"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/copy"
            android:text="@string/copy_and_send_to"
            android:layout_alignRight="@id/white_thingy_two"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            />

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/popup_copy_back"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/exit"
            android:text="@string/exit"
            android:layout_alignLeft="@+id/white_thingy_two"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            />

    </RelativeLayout>
</LinearLayout>