<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/deleting_sequences"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="750dp"
    android:layout_height="650dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/Headline_delete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/popup_delete_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="60sp"
            android:textStyle="bold"
            android:text="@string/delete_sequences"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            />
        
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lists_copy"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="horizontal">

        <dk.aau.cs.giraf.gui.GGridView
            android:id="@+id/existing_sequences"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:numColumns="3"
            android:listSelector="#00000000"
            android:fadeScrollbars="false">
        </dk.aau.cs.giraf.gui.GGridView>

        <ImageView
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/copy_sequences_window_arrow"
            android:src="@drawable/gdialogcolorselect_arrow_right"
            android:layout_gravity="center_vertical"
            />

        <dk.aau.cs.giraf.gui.GGridView
            android:id="@+id/empty_sequences"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:numColumns="3"
            android:listSelector="#00000000"
            android:fadeScrollbars="false">
        </dk.aau.cs.giraf.gui.GGridView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons_delete"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/white_thingy"
            android:contentDescription="@string/empty_space"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/popup_accept"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/trashcan"
            android:text="@string/delete_sequences"
            android:layout_alignRight="@id/white_thingy"
            android:layout_marginRight="25dp"
            android:layout_marginTop="15dp"
            />

        <dk.aau.cs.giraf.gui.GButton
            android:id="@+id/popup_back"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/exit"
            android:text="@string/exit"
            android:layout_alignLeft="@+id/white_thingy"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            />

        </RelativeLayout>

</LinearLayout>